# multitenancy_qdrant

./: .gitignore  docker-compose.yml  pyproject.toml
